--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
-.App {
-  text-align: center;
+.app {
+  width: 100%;
+  max-width: 740px;
+  margin: 4rem auto;
+}
+
+.item-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #efefef;
+}
+.item > * + * {
+  margin-left: 1rem;
+}
+.item-image {
+  height: 60px;
+  width: 60px;
+  object-fit: cover;
+}
+.item-title {
+  margin: 1rem;
+}
+.item-city {
+  margin-left: auto;
+  font-style: italic;
 }
