--- a/src/components/item-form/item-form.css
+++ b/src/components/item-form/item-form.css
@@ -20,6 +20,16 @@
   padding: 0.5rem 0.8rem;
   border-radius: 4px;
   border: 1px solid #e5e7ee;
+  height: 44px;
   width: 280px;
   box-sizing: border-box;
+  background-color: #f9fafd;
+  box-shadow: inset 0 0 6px -3px rgba(0, 65, 255, 0.14);
+}
+.item-form label > input:focus,
+.item-form label > select:focus {
+  outline: 0;
+  background-color: white;
+  box-shadow: 0 0 1px 3px #4069e133;
+  border-color: #4069e1;
 }
